<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDarker"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDarker"/>

    <ImageView
        android:id="@+id/imageView"
        android:backgroundTint="@color/colorPrimaryDarker"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="0dp"
        app:srcCompat="@drawable/logo2"
        android:background="#055"
        android:padding="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/email"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textColorHint="@color/yellow"
        android:layout_width="200dp"
        android:layout_height="53dp"
        android:theme="@style/EditTextTheme"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/yellow"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:drawableTint="@color/yellow"
        android:textSize="16sp"
        android:textColor="@color/yellow"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/password"
        android:textCursorDrawable="@drawable/cursor_color"
        android:layout_width="200dp"
        android:layout_height="53dp"
        android:ems="10"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email"
        android:layout_below="@+id/email"
        android:hint="@string/password"
        android:theme="@style/EditTextTheme"
        android:textColor="@color/yellow"
        android:textColorHint="@color/yellow"
        android:drawableLeft="@drawable/ic_action_pass"
        android:drawableTint="@color/yellow"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/yellow"
        android:inputType="textPassword"
        tools:ignore="RtlHardcoded" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/yellow"
        app:cardElevation="10dp"
        app:cardCornerRadius="25dp"
        android:layout_marginTop="35dp"
        android:onClick="login">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="18sp"
                android:text="@string/login"
                android:textColor="#000"
                android:textStyle="bold"
                android:fontFamily="@font/roboto"/>
        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login"
            android:background="#0000"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_here"
        android:textSize="18sp"
        android:textColor="@color/yellow"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/card"
        android:layout_centerHorizontal="true"
        android:onClick="Register"/>

</RelativeLayout>